@@ -1,65 +1,0 @@
-name: macos
-
-on:
-  push:
-    branches:
-      - '*'
-    tags-ignore:
-      - '*'
-  pull_request:
-
-env:
-  PERL5LIB: /Users/runner/perl5/lib/perl5
-  PERL_LOCAL_LIB_ROOT: /Users/runner/perl5
-  PERL_MB_OPT: --install_base /Users/runner/perl5
-  PERL_MM_OPT: INSTALL_BASE=/Users/runner/perl5
-
-jobs:
-  perl:
-
-    runs-on: macOS-latest
-
-    strategy:
-      fail-fast: false
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Set up Perl
-        run: |
-          brew install perl libffi libarchive
-          curl https://cpanmin.us | perl - App::cpanminus -n
-          echo "/Users/runner/perl5/bin" >> $GITHUB_PATH
-
-      - name: perl -V
-        run: perl -V
-
-      - name: Prepare for cache
-        run: |
-          perl -V > perlversion.txt
-          ls -l perlversion.txt
-
-      - name: Cache CPAN modules
-        uses: actions/cache@v1
-        with:
-          path: ~/perl5
-          key: ${{ runner.os }}-build-${{ hashFiles('perlversion.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ hashFiles('perlversion.txt') }}
-
-      - name: Install Static Dependencies
-        run: |
-          cpanm -n Dist::Zilla
-          dzil authordeps --missing | cpanm -n
-          dzil listdeps --missing   | cpanm -n
-
-      - name: Install Dynamic Dependencies
-        run: dzil run --no-build 'cpanm --installdeps .'
-
-      - name: Run Tests
-        run: dzil test -v
-
-      - name: CPAN log
-        if: ${{ failure() }}
-        run: |
-          cat ~/.cpanm/latest-build/build.log
