@@ -12,8 +12,8 @@ release_tests = 1
 test2_v0      = 1
 github_user   = uperl
 
+workflow = static
 workflow = linux
-workflow = macos
 
 preamble = | use Git::Wrapper;
 preamble = | use Sort::Versions qw( versioncmp );
